# pus-backup

./: .gitignore  CMakeLists.txt
cw_02/: s  s.c
cw_03/: s  s.c
cw_03_cw/: k.c  s
cw_04/: k  k.c  s  s.c
cw_04_cw/: k  s  s.c
cw_05/: k  s.c
cw_05/b/: k.c  s
cw_05_cw/a/: s.c
cw_05_cw/b/: k  k.c  s  s.c
cw_06/a/: s.c
cw_06/b/a/: k.c  s
cw_06/b/b/: k  s  s.c
cw_06/c/: k  k.c  s
cw_06/d/: k  k.c  s  s.c  xinetd.conf
cw_06_cw/a/: k  s  s.c
cw_06_cw/c/: k  s.c  xinetd.conf
cw_07/a/: ip.txt  k  k.c  k_r  k_r.c  kkr  s  s.c  sk
cw_07/aa/: k  k.c  s  s.c
cw_07/b/: k  k.c  s  s.c
cw_07/b3/: k  k.c  s  s.c
cw_07/bb/: k  k.c  s  s.c
cw_07/bb@/: k  k.c  s  s.c
cw_07/c/: k  k.c
cw_07/d/: s  s.c
cw_07_cw/a/: ip.txt  k  k.c  s  s.c
cw_07_cw/b/: ip.txt  k  k.c  s.c
cw_07_cw/c/: ip.txt  k  s  s.c
cw_07_cw/d/: ip.txt  k  k.c  kk  s  s.c
cw_08/: k  k.c  s  s.c
pus1/a/: CMakeLists.txt  main  p.c
pus1/b/: CMakeLists.txt  p  p.c
pus1/c/: p  p.c
pus1/d/: CMakeLists.txt  p  p.c  results.txt  s
pus2/: CMakeLists.txt  c  c2  client  client.c  client2  client2.c  s  server  server.c  server3.c
